<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="login_label">Login</string>
    <string name="login_hint">login name</string>
    <string name="emailText"></string>
    <string name="login_button">LOG IN</string>
    <string name="pwd_label">password</string>
    <string name="switch_label">What does this do?</string>
    <string name="radio_label">RadioButton</string>
    <string name="checkbox_label">CheckBox</string>
    <string name="checkbox_question">Do you want to finish the activity?</string>
    <string name="checkbox_title">Information</string>
    <string name="checkbox_ok">OK</string>
    <string name="checkbox_cancel">CANCEL</string>
    <string name="switch_on">Switch is On</string>
    <string name="switch_off">Switch is Off</string>
    <string name="share_info">ListItemsActivity passed: My information to share.</string>
    <string name="initialText">Hello</string>

    <string name="current_t">Current Temperature</string>
    <string name="min_t">Min Temperature</string>
    <string name="max_t">Max Temperature</string>

    <string name="start_button">Start Chat</string>
    <string name="send_button">Send</string>
    <string name="weather_button">WeatherForecast</string>

    <string name="delButton">DELETE THIS MESSAGE</string>
    <string name="textId">ID= </string>
    <string name="textMessage">MessageHere </string>
    <string name="title_activity_test_toolbar">TestToolbar</string>

    <string name="title_one">Cart</string>
    <string name="title_two">Visit</string>
    <string name="title_three">Graduation</string>
    <string name="title_about">Settings</string>
    <string name="dialogTitle">Do you want to go back?</string>
    <string name="graTitle">Graduation from </string>
    <string name="ok">Yes</string>
    <string name="cancel">No</string>
</resources>
